--- a/CHANGES
+++ b/CHANGES
@@ -2,509 +2,6 @@ Complete change log for PanDA Pilot version PICARD
 --------------------------------------------------
 
 
-66.0:
-
-Looping job killer update:
-- Updated __loopingJobKiller() to ignore file name patterns 'memory_' and 'mem.'. Previously, the pilot only ignore 'memory_monitor' patterns (Monitor)
-- Discussed in JIRA ticket https://its.cern.ch/jira/browse/ATLASPANDA-281
-
-User request to allow AtlasOffline nightlies releases (same setup as AtlasDerivation)
-- Update getCacheInfo() to handle AtlasOffline nightlies releases (ATLASExperiment)
-
-Updates from Wen Guan:
-
-Commit Summary
-
-record number events to fix nEvents for preempted jobs
-update schedconfig
-merge with main-dev
-
-File Changes
-
-M ATLASSiteInformation.py (2)
-M RunJobEvent.py (14)
-
-Updates from Wen Guan (2):
-
-Commit Summary
-
-fix panda client to report cputime in heartbeat
-fix wrong pilot error
-fix nevnts and cputime for preempted jobs
-File Changes
-
-M Monitor.py (3)
-M PandaServerClient.py (19)
-M RunJobEvent.py (14)
-M RunJobUtilities.py (2)
-
-Updates from Wen Guan (3):
-
-Commit Summary
-
-define event service error code because of over subscribed events
-define event service error code because of no available events
-remove agis overrides in pilot
-
-File Changes
-
-M ATLASSiteInformation.py (72)
-M PilotErrors.py (6)
-
-Updates from Wen Guan (4):
-
-Commit Summary
-
-add new objectstore sitemover
-fix pilot to handle errors in priority error report
-report over subscribe events error in RunJobHPCEvent
-define message server error and objectstore setup error
-reorganize pilot errors
-fix runjobevent to use the new site mover
-remove space
-
-File Changes
-
-M PilotErrors.py (6)
-M RunJobEvent.py (34)
-M RunJobHpcEvent.py (10)
-M UpdateHandler.py (8)
-A movers/objectstore_sitemover.py (29)
-M movers/sitemovers.py (1)
-
-Updates from Taylor Childers:
-
--   Added code to write a file named batchid.<batchid>.txt to disk after the batch job is submitted so one does not have to scour the logs to find the id.
--   Standardizing the many Loggers we have under HPC. They now all use UTC time in the same format and include the process id to help isolate multithreading messages. Al
-    so added the process id to the main pilot Logger.
--   Removed the sys.exit call which do not allow MPI to finalize properly. If MPI Finize is never called jobs can run on past execution end, wasting wallclock hours
--   Added more logging messages and changed from using the depricated commands module to the subprocess module for executing slurm commands
--   Changed Logging to standard logging module and brought the MPI import to the top so that MPI.COMM_WORLD.Abort could be called when errors occur. Abort ensures all
-    MPI ranks are killed. I added this because I was seeing failures where the worker nodes were not being released even though all processes had exited.
-
-Files changed:
-HPC/HPCJob.py
-HPC/HPCManagerPlugins/slurm.py
-HPC/Logger.py
-HPC/pandayoda/yodacore/Logger.py
-HPC/pandayoda/yodaexe/Droid.py
-Logger.py
-RunJobHpcEvent.py
-pUtil.py
-
-Updates from Alexey Anisenkov:
-
-https://github.com/PanDAWMS/pilot/pull/59
-
-sitemovers: review and update logic to send traces to Rucio
-
-Major sitemovers updates:
-
-Job log processing has been integrated into newer sitemover architecture both for normal stage-out to primary SE and special log file transfers. (get rid of old wrappers) [JobLog]
-cleaned and updated logic for normal stage-out of logs to primary SE [JobLog.transferLogFile]
-implemented special log transfer to ObjectStore DDMEndpoints within new sitemover architecture: -- new activity='pls' ("pilot log secondary/special") introduced to customize the workflow if need -- objectstoreSiteMover is hardcoded as default sitemover for special log transfers to OS -- added GetSURL stub function for objectstoreSiteMover
-various small fixes
-Workflow details:
-
-In current implementation, normal stage-out of logs to primary SE is always executed.
-Special transfer of log files is applied as optional action and controlled by 'catchall' queue parameter (log_to_objectstore) or jobSpec options like 'eventService' and 'putLogToOS' (actually old doSpecialLogFileTransfer() function is reused).
-
-Job ignores (possible) failures of special log transfer to OS and will continue job processing in case of OS transfer issues.
-
-Commit Summary
-
-sitemovers: JobLog processing migrated to newer wrapper of sitemovers
-JobLog: implemented special log transfer to OS DDMEndpoints within new sitemover architecture (new activity='pls' introduced)
-sitemovers: hardcoded default sitemover (objectstoreSiteMover) for special log transfers to OS (activity='pls')
-sitemover: cleanup and fix. GetSURL stub function for objectstoreSiteMover
-
-File Changes
-
-M Job.py (10)
-M JobLog.py (156)
-M Mover.py (15)
-M SiteInformation.py (36)
-M movers/mover.py (62)
-M movers/objectstore_sitemover.py (15)
-
-https://github.com/PanDAWMS/pilot/pull/60
-
-quick fix: keep job.state untouched when log transfer successfully finished
-
-Commit Summary
-
-quick fix: keep job.state untouched when log transfer successfully finished.
-
-File Changes
-
-M JobLog.py (2)
-
-https://github.com/PanDAWMS/pilot/pull/61
-
-Commit Summary
-
-sitemovers: review and updated logic to send traces
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-trace ClientState fixed
-
-File Changes
-
-M Mover.py (30)
-M movers/mover.py (29)
-
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-66.1:
-
-General changes:
-
-- Out-commented setting memory in getsetWNMem() and __getsetWNMem() (pilot)
-
-Updates from Wen Guan:
-
-  https://github.com/PanDAWMS/pilot/pull/62
-
-Commit Summary
-
-avoid schedule same jobs to same ranks
-Yoda to use gmtime
-test new mover
-fix job corecount of es on single core situation
-fix merge conflicts
-
-File Changes
-
-M ATLASSiteInformation.py (1)
-M HPC/EventServer/Logger.py (2)
-M HPC/Logger.py (4)
-M HPC/pandayoda/yodacore/Yoda.py (16)
-M RunJobEvent.py (1)
-
-  https://github.com/PanDAWMS/pilot/pull/65
-
-Commit Summary
-
-report only stagedout events to panda
-fix s3objectstore sitemover with disabling http proxy
-report es fatal error when athenamp crashed on some events
-
-File Changes
-
-M RunJobEvent.py (33)
-M S3ObjectstoreSiteMover.py (80)
-
-Updates from Alexey Anisenkov:
-
-https://github.com/PanDAWMS/pilot/pull/63
-
-Commit Summary
-
-Mover bugfix: fixed typo in time() usage (wrong import statement)
-sitemover updates: use new schedconf.astorages attribute (associated list of local storages) to look up default DDMEndpoint destination (Pilot side destination choice).
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-fixed typo
-small fixes, increase verbosity
-
-File Changes
-
-M Job.py (1)
-M Mover.py (4)
-M RunJob.py (2)
-M SiteInformation.py (19)
-M movers/mover.py (67)
-
-  https://github.com/PanDAWMS/pilot/pull/64
-
-Commit Summary
-
-typo fix
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-
-File Changes
-
-M movers/base.py (2)
-
-  https://github.com/PanDAWMS/pilot/pull/66
-
-Commit Summary
-
-pilot: -M option implemented:
-File Changes
-
-M pilot.py (16)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-66.2:
-
-Site mover updates from A. Anisenkov:
-
-- Fixed (typo) issue with stage-out data structure generation in case of job produces extra files.
-- Implemented proper handling of DBReleases (ignore stage-in of dbreleases if they are available on CVMFS, otherwise do normal stage-in, raise an exception if dbrelease skeleton file can not be created)
-- Added special info tag into PilotID identifier send to PanDA to track if new sitemover workflow is activated or not
-- getPilotVersion() bug fixed
-
-https://github.com/PanDAWMS/pilot/pull/70
-
-Commit Summary
-
-lcgcpSiteMover: clean up action implemented (force to remove remote file in case of failed transfer)
-job.py update
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-sitemover: cosmetic/verbosity added
-
-File Changes
-
-M Job.py (8)
-M movers/lcgcp_sitemover.py (53)
-M movers/mover.py (6)
-
-https://github.com/PanDAWMS/pilot/pull/68
-
-Commit Summary
-
-batchID value is removed from PilotID parameter sent to PanDA
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-pilotID tag updated
-cosm fix
-File Changes
-
-M PandaServerClient.py (19)
-
-https://github.com/PanDAWMS/pilot/pull/67
-
-Commit Summary
-
-sitemovers: bugfix: fixed (typo) issue with stage-out data structure generation in case of job produces extra files.
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-
-File Changes
-
-M Job.py (2)
-
-Event service updates from W. Guan:
-
-https://github.com/PanDAWMS/pilot/pull/69
-
-Commit Summary
-
-report different fatal errors
-update eventtype in trace report for ES
-report error code to event status
-update pilot to report jobsubstatus
-update to report objectstore error in errorDiag
-fix job sub status
-
-File Changes
-
-M EventRanges.py (5)
-M Job.py (4)
-M PandaServerClient.py (5)
-M RunJobEvent.py (91)
-M RunJobUtilities.py (2)
-M S3ObjectstoreSiteMover.py (16)
-M UpdateHandler.py (4)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-66.3:
-
-Updates from Alexey Anisenkov:
-
-https://github.com/PanDAWMS/pilot/pull/71
-
-various small sitemover updates:
-- movers: base remote_cleanup handler added (fixed lcgcp clean up action)
-- fixed getSURL() to avoid transfers to non deterministic sites (quick hack for now based on checking '/rucio' postfix)
-- changed sitemover timeout threshold to fixed 1h value
-- various cosmetic fixes
-
-https://github.com/PanDAWMS/pilot/pull/72
-
-- fixed checksum value extraction from the calc checksum command
-- Updated logic to handle extra output (splitted) files produced by payload (defined in Job report) - ("input pfn file is not exist" issue for MCORE jobs)
-- stage-out loop optimization
-- lcgcp file clean up: add 1m sleep nap before remote file removal
-
-https://github.com/PanDAWMS/pilot/pull/73
-
-- fixed timeout value
-- stage-in workflow optimized (stop processing in case of failed transfers), proper error reporting
-- set max timeout value (depending on filesize) up to 3h
-- Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-- fixed error reporting
-
-File Changes
-M movers/base.py (6)
-M movers/mover.py (263)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-66.4:
-
-General updates:
-
-- Removed gfal references from LocalSiteMover
-
-Updates from Alexey Anisenkov:
-
-  https://github.com/PanDAWMS/pilot/pull/74
-
-Commit Summary
-
-mover: check space size workflow cosmetic
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-
-File Changes
-
-M movers/mover.py (6)
-
-Updates from Wen Guan:
-
-  https://github.com/PanDAWMS/pilot/pull/75
-
-Update RunJobEvent.py to support new movers
-Update RunJob.py to support new movers.
-update movers to support stageout es to objectstore.
-update movers to support stagein es from objectstore.
-report external stageout time(time after athenamp terminated) in jobmetrics.
-fix to report pilot substatus and fail state.
-You can view, comment on, or merge this pull request online at:
-
-Commit Summary
-
-es to support new movers
-es to support new movers
-recover old asynchronous stageout
-update runjobEvent to support new mover
-set pilot final failed state
-report external stagout time
-fix event ranges updates
-implemented stageout os
-in new movers adding stagin os and stageout os
-fix refer of FileSpec
-fix os keys
-fix issues when staging out es
-fix external stageout time
-update movers to support objectstore stagein
-add pfn to refer the full file path
-rebase with upstream main-dev
-
-File Changes
-
-M EventRanges.py (43)
-M Job.py (13)
-M Mover.py (54)
-M PandaServerClient.py (2)
-M RunJobEvent.py (408)
-M RunJobUtilities.py (3)
-M UpdateHandler.py (8)
-M movers/base.py (2)
-M movers/mover.py (112)
-M movers/objectstore_sitemover.py (20)
-M movers/rucio_sitemover.py (19)
-
-  https://github.com/PanDAWMS/pilot/pull/76
-
-Commit Summary
-
-set substatus when failJob
-
-File Changes
-
-M RunJobEvent.py (1)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-66.5:
-
-General updates:
-
-- Corrected bad overwriting of error code in getNodeStructure(). Problem reported by R. Walker and discussed in JIRA ticket https://its.cern.ch/jira/browse/ATLASPANDA-317 (PandaServerClient)
-
-Updates from Alexey Anisenkov:
-
-  https://github.com/PanDAWMS/pilot/pull/77
-
-Commit Summary
-
-- Implemented random sleep time (within min and max values) for stagein/stageout in case of failures
-- Set sleep retry time values: (20..50) secs for stage-in, (4.9..5) minutes for stage-out
-
-File Changes
-
-M Mover.py (2)
-M movers/base.py (14)
-M movers/mover.py (43)
-
-  https://github.com/PanDAWMS/pilot/pull/80
-
-Commit Summary
-
-xrdcpSiteMover: switch to use legacy "-adler" option for upload since at some site newer --cksum does not work ([3013] query chksum is not supported error)
-xrdcpSiteMover: reverted back xrdcp to use --cksum for proper server side remote checksum validation (will not work until xroot server provides remote checksum calc feature)
-xrdcpsitemover: make a call to get xrdcp client version
-xrdcp clean up
-xrdcpSiteMover: implemented proper CRC verification in case xrootd does not not support server-side checksum calculation of fly
-cosmetic verbose print
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
-
-File Changes
-
-M PilotErrors.py (6)
-M SiteInformation.py (6)
-M movers/base.py (4)
-M movers/xrdcp_sitemover.py (19)
-
-Updates from David Cameron:
-
-  https://github.com/PanDAWMS/pilot/pull/78
-
-Commit Summary
-
-mv implementation of new site mover
-
-File Changes
-
-A movers/mv_mover.py (71)
-
-Updates from Wen Guan:
-
-  https://github.com/PanDAWMS/pilot/pull/79
-
-Commit Summary
-
-Fixed pilot error when killed with signal
-
-File Changes
-
-M pUtil.py (1)
-
-Updates from Taylor Childers:
-
-  https://github.com/PanDAWMS/pilot/pull/81
-
-Commit Summary
-
-Change path for batchid file
-Removed logic that failed job after some number of failed calls to polling command. Failure should be decided by the HpcManager module or above, not by the sheduler interface module
-Replaced sys.exit calls with exception handling. We do not want to use sys.exit in Yoda because MPI will not exit properly if one rank calls sys.exit.
-Moved the logic to kill the job to HPCManager for when the scheduler commands fail. Gave the command 120 chances to succeed with 60 second wait time. So 2 hrs.
-Merge remote-tracking branch 'upstream/main-dev'
-Fixed typo
-Changed batchid path
-
-File Changes
-
-M HPC/HPCManager.py (21)
-M HPC/HPCManagerPlugins/slurm.py (8)
-M HPC/pandayoda/yodacore/Yoda.py (17)
-M RunJobHpcEvent.py (5)
-
-////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
 67.0:
 
 General updates:
@@ -521,7 +18,7 @@ Updates from Wen Guan:
 
 Commit Summary
 
-To suppport s3+rucio
+To support s3+rucio
 Fixed bug
 
 File Changes
@@ -625,6 +122,22 @@ File Changes
 
 M movers/base.py (2)
 M movers/lcgcp_sitemover.py (2)
+
+  https://github.com/PanDAWMS/pilot/pull/89
+
+gfalcopySiteMover sitemover implemented
+You can view, comment on, or merge this pull request online at:
+
+Commit Summary
+
+gfalcopySiteMover sitemover implemented
+Merge branch 'main-dev' of https://github.com/PanDAWMS/pilot into main-dev
+
+File Changes
+
+M movers/base.py (19)
+A movers/gfalcopy_sitemover.py (210)
+M movers/sitemovers.py (1)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
