--- a/CHANGES
+++ b/CHANGES
@@ -141,6 +141,34 @@ M movers/sitemovers.py (1)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+67.1
+
+Updates from Mario Lassnig
+
+  https://github.com/PanDAWMS/pilot/pull/91
+
+Commit Summary
+
+- storm: fix for timestamp corner case 
+
+File Changes
+
+  M movers/storm_sitemover.py (13) 
+
+Updates from Wen Guan
+
+  https://github.com/PanDAWMS/pilot/pull/92
+
+Commit Summary
+
+- fixed undefined runCommandList 
+
+File Changes
+
+  M RunJobEvent.py (10) 
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
