--- a/CHANGES
+++ b/CHANGES
@@ -145,7 +145,9 @@ M movers/sitemovers.py (1)
 
 General changes
 
-..
+- Removed any initial 0's from the locally calculated checksums (for both stage-in/out) in case there are discrepancies.
+  Externally calculated Adler32 values are not necessarily of fixed length and might not include initial 0 values.
+  Discussed in JIRA ticket https://its.cern.ch/jira/browse/ATLASPANDA-324 (movers/base)
 
 Updates from Mario Lassnig
 
