--- a/CHANGES
+++ b/CHANGES
@@ -200,6 +200,25 @@ M movers/mv_sitemover.py (29)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+67.2
+
+General changes:
+
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/94
+
+Commit Summary
+
+- Fix gfal checksum difference while gfal removes leading 0 in checksum
+
+File Changes
+
+M GFAL2SiteMover.py (2)
+M movers/base.py (17)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
