--- a/CHANGES
+++ b/CHANGES
@@ -206,6 +206,7 @@ General changes:
 
 - Corrected misleading error message (StageOut->StageIn) in stageIn() (movers/base)
 - Ignoring lsm checksum error in stageOut() (movers/base)
+- Created updateRunCommand() used by __main__() (RunJobEvent)
 
 Event service changes:
 
