--- a/CHANGES
+++ b/CHANGES
@@ -181,6 +181,14 @@ M movers/mv_sitemover.py (29)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+67.2
+
+Hotfix release with urgent bug fix
+
+- Wrong event type sent with traces. Fixed by Mario Lassnig (Mover)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
