--- a/CHANGES
+++ b/CHANGES
@@ -254,6 +254,12 @@ File Changes
 
 M movers/gfalcopy_sitemover.py (2)
 
+Updates from Taylor Childers
+
+See closed pull request:
+https://github.com/PanDAWMS/pilot/pull/100
+
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
