--- a/CHANGES
+++ b/CHANGES
@@ -279,6 +279,12 @@ https://github.com/PanDAWMS/pilot/pull/100
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+67.4
+
+General changes:
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 TODO:
 
