--- a/CHANGES
+++ b/CHANGES
@@ -268,6 +268,14 @@ https://github.com/PanDAWMS/pilot/pull/100
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+67.4
+
+General changes:
+- Removed duplicated call to downloadEventRanges() with numRanges set to 2 (RunJobHpcEvent)
+- Restored correct version of storm mover in pilot tarball
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
