Removed duplicated call to downloadEventRanges

--- a/CHANGES
+++ b/CHANGES
@@ -282,6 +282,14 @@ https://github.com/PanDAWMS/pilot/pull/100
 67.4
 
 General changes:
+- Removed duplicated call to downloadEventRanges() with numRanges set to 2 (RunJobHpcEvent)
+- Restored correct version of storm mover in pilot tarball
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+67.5
+
+General changes:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
