--- a/CHANGES
+++ b/CHANGES
@@ -292,7 +292,7 @@ General changes:
 General changes:
 
 - Added call to pUtil.getJobStatus() in getNewJob(). After job has been downloaded, check with the PanDA server that the job is not already in a running state. This can happen due to a bug on the batch system side on Nordugrud resources. Requested by Andrej Filipcic, David Cameron
-- Removed negation of id number sent to os.killpg() in killProcesses() (processes)
+- Removed negation of id number sent to os.killpg() in killProcesses(). Requested by Rod Walker (processes)
 
 Hardcoded pandaserver urls:
 
