--- a/CHANGES
+++ b/CHANGES
@@ -287,6 +287,7 @@ General changes:
 
 - Added call to pUtil.getJobStatus() in getNewJob(). After job has been downloaded, check with the PanDA server that the job is not already in a running state. This can happen due to a bug on the batch system side on Nordugrud resources. Requested by Andrej Filipcic, David Cameron
 - Removed negation of id number sent to os.killpg() in killProcesses(). Requested by Rod Walker (processes)
+- Added time-out to pstack command in dumpStackTrace() (processes)
 
 Benchmarks:
 
